# Turing-Bot

./: .gitignore  README.md  pyproject.toml
Turing-Bot/: main.py
Turing-Bot/bot/: bot.py
Turing-Bot/bot/cogs/moderation/: ban.py  purge.py  timeout.py  unban.py  untimeout.py
Turing-Bot/bot/cogs/turing/: create_teams.py  question.py  scoring.py  submit.py
Turing-Bot/bot/utils/: converters.py  embed.py
