[tool.poetry]
name = "turing-bot"
version = "0.1.0"
description = "Turing Discord Bot"
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "turing_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {extras = ["speed", "voice"], version = "^2.2.2"}
python-dotenv = "^0.21.0"
rich = "^12.6.0"
anvil-uplink = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
venvPath = '/Users/hari/.virtualenvs'
venv = 'turing-bot-u3qe4cco-py3.10'
